--- a/src/motions/components/motion/MotionView.scss
+++ b/src/motions/components/motion/MotionView.scss
@@ -15,6 +15,7 @@
   h1 {
     padding: 0;
     margin: 0;
+    font-size: 2em;
   }
 }
 
@@ -30,25 +31,27 @@
 
     &.md-status {
 
-      &:after {
-        content: "⏺";
-      }
-
-      &.not_voted:after {
-        color: $color-not-voted;
-      }
-      &.accepted:after {
-        color: $color-accepted;
-      }
-      &.referred:after {
-        color: $color-referred;
-      }
-      &.dismissed:after {
-        color: $color-dismissed;
-      }
-      &.rejected:after {
-        color: $color-rejected;
+      .md-status-indicator {
+        &.not_voted {
+          color: $color-not-voted;
+        }
+        &.accepted {
+          color: $color-accepted;
+        }
+        &.referred {
+          color: $color-referred;
+        }
+        &.dismissed {
+          color: $color-dismissed;
+        }
+        &.rejected {
+          color: $color-rejected;
+        }
       }
     }
   }
+}
+
+.md-motion-body {
+  margin-bottom: 1.5em;
 }
